--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
   </head>
   <body>
     <canvas class="webgl"></canvas>
-
+	<div class="nav">
+		<button data-face="n">North</button>
+		<button data-face="e">East</button>
+		<button data-face="s">South</button>
+		<button data-face="w">West</button>
+		<button data-face="top">Top</button>
+	</div>
     <script type="module" src="/main.js"></script>
 	<!-- <script type="x-shader/x-vertex" id="vertexShader">
 
