--- a/index.html
+++ b/index.html
@@ -4,46 +4,18 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>ThreeJS Learning</title>
+	<!-- include style.css -->
+	<link rel="stylesheet" href="./src/css/style.css">
   </head>
   <body>
-    <canvas class="webgl"></canvas>
-	<div class="nav">
-		<button data-face="n">North</button>
-		<button data-face="e">East</button>
-		<button data-face="s">South</button>
-		<button data-face="w">West</button>
-		<button data-face="top">Top</button>
+	<!-- Launchpad learning and perling html app -->
+	<!-- Create 2 button to launch the application -->
+	<!-- 1. Learning -->
+	<!-- 2. Perlin -->
+	<div class="container-index">
+		<button class="btn-index" onclick="window.location.href = './learning.html';">Learning</button>
+		<button class="btn-index" onclick="window.location.href = './perlin.html';">Perlin</button>
 	</div>
-    <script type="module" src="/main.js"></script>
-	<!-- <script type="x-shader/x-vertex" id="vertexShader">
-
-		varying vec3 vWorldPosition;
-
-		void main() {
-
-			vec4 worldPosition = modelMatrix * vec4( position, 1.0 );
-			vWorldPosition = worldPosition.xyz;
-
-			gl_Position = projectionMatrix * modelViewMatrix * vec4( position, 1.0 );
-		}
-
-	</script>
-	<script type="x-shader/x-fragment" id="fragmentShader">
-		uniform vec3 topColor;
-		uniform vec3 bottomColor;
-		uniform float offset;
-		uniform float exponent;
-
-		varying vec3 vWorldPosition;
-
-		void main() {
-
-			float h = normalize( vWorldPosition + offset ).y;
-			gl_FragColor = vec4( mix( bottomColor, topColor, max( pow( max( h , 0.0), exponent ), 0.0 ) ), 1.0 );
-
-		}
-
-	</script> -->
   </body>
 </html>
