--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 	<!-- 1. Learning -->
 	<!-- 2. Perlin -->
 	<div class="container-index">
-		<button class="btn-index" onclick="window.location.href = './learning.html';">Learning</button>
-		<button class="btn-index" onclick="window.location.href = './perlin.html';">Perlin</button>
+		<button class="btn-index" onclick="window.location.href = '/learning';">Learning</button>
+		<button class="btn-index" onclick="window.location.href = '/perlin';">Perlin</button>
 	</div>
   </body>
 </html>
