update ma npn si sa se funzeca.-.

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 	<!-- 1. Learning -->
 	<!-- 2. Perlin -->
 	<div class="container-index">
-		<button class="btn-index" onclick="window.location.href = '/learning';">Learning</button>
-		<button class="btn-index" onclick="window.location.href = '/perlin.html';">Perlin</button>
+		<a class="btn-index" href="/learning">Learning</a>
+		<a class="btn-index" href="/perlin">Perlin</a>
 	</div>
   </body>
 </html>
