--- a/src/pages/learning.html
+++ b/src/pages/learning.html
@@ -1,21 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Perlin</title>
-  </head>
-  <body>
+<html>
+<head>
+    <meta charset='utf-8'>
+    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+    <title>Learning</title>
+    <meta name='viewport' content='width=device-width, initial-scale=1'>
+    
+</head>
+<body>
     <canvas class="webgl"></canvas>
-	<div class="nav">
-		<button data-face="n">North</button>
-		<button data-face="e">East</button>
-		<button data-face="s">South</button>
-		<button data-face="w">West</button>
-		<button data-face="top">Top</button>
-	</div>
-    <script type="module" src="./src/js/main.js"></script>
+    <script src='../js/learning.js' type="module" > </script>
 	<!-- <script type="x-shader/x-vertex" id="vertexShader">
 
 		varying vec3 vWorldPosition;
@@ -45,5 +39,5 @@
 		}
 
 	</script> -->
-  </body>
+</body>
 </html>
