build not workng

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 	<!-- 1. Learning -->
 	<!-- 2. Perlin -->
 	<div class="container-index">
-		<a class="btn-index" href="/learning">Learning</a>
-		<a class="btn-index" href="/perlin">Perlin</a>
+		<a class="btn-index" href="/src/pages/learning.html">Learning</a>
+		<a class="btn-index" href="/src/pages/perlin.html">Perlin</a>
 	</div>
   </body>
 </html>
