--- a/src/pages/learning.html
+++ b/src/pages/learning.html
@@ -5,11 +5,13 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Learning</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    
 </head>
 <body>
-    <canvas class="webgl"></canvas>
-    <script src='../js/learning.js' type="module" > </script>
+	<canvas class="webgl"></canvas>
+	<script type="module">
+		import '../js/learning.js'
+	</script>
+	<!-- <script  type="module" src='../js/learning.js' > </script> -->
 	<!-- <script type="x-shader/x-vertex" id="vertexShader">
 
 		varying vec3 vWorldPosition;
