--- a/src/pages/perlin.html
+++ b/src/pages/perlin.html
@@ -8,13 +8,16 @@
   </head>
   <body>
     <canvas class="webgl"></canvas>
-	<div class="nav">
-		<button data-face="n">North</button>
-		<button data-face="e">East</button>
-		<button data-face="s">South</button>
-		<button data-face="w">West</button>
-		<button data-face="top">Top</button>
-	</div>
-    <script type="module" src="../js/main.js"></script>
+    <div class="nav">
+      <button data-face="n">North</button>
+      <button data-face="e">East</button>
+      <button data-face="s">South</button>
+      <button data-face="w">West</button>
+      <button data-face="top">Top</button>
+    </div>
+    <script type="module">
+      import '../js/perlin.js'
+    </script>
+    <!-- <script type="module" src="../js/perlin.js"></script> -->
   </body>
 </html>
