--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 	<link rel="stylesheet" href="./src/css/style.css">
   </head>
   <body>
+	<script type="module">
+		import './src/js/main.js'
+	</script>
 	<!-- Launchpad learning and perling html app -->
 	<!-- Create 2 button to launch the application -->
 	<!-- 1. Learning -->
